--- a/charts/mongodb-migrant/Chart.yaml
+++ b/charts/mongodb-migrant/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: postgres-migrant
+name: mongo-migrant
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
