--- a/charts/mongodb-migrant/index.yaml
+++ b/charts/mongodb-migrant/index.yaml
@@ -1,14 +1,3 @@
 apiVersion: v1
-entries:
-  postgres-migrant:
-  - apiVersion: v2
-    appVersion: 1.16.0
-    created: "2023-09-21T19:26:22.939965+05:30"
-    description: A Helm chart for Kubernetes
-    digest: 4bc613eaa00d30224d55e3689efa26ab5088a65752244c45537ebe1f230d7352
-    name: postgres-migrant
-    type: application
-    urls:
-    - postgres-migrant-0.0.1.tgz
-    version: 0.0.1
-generated: "2023-09-22T19:00:41.3327+05:30"
+entries: {}
+generated: "2023-09-25T12:31:11.108528+05:30"
