--- a/charts/mysql-migrant/templates/cm-secrets.yaml
+++ b/charts/mysql-migrant/templates/cm-secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: test-secret
+  name: {{ $.Release.Name  }}-secret
 type: Opaque
 data:
   DB_PASSWORD: {{ .Values.database_credentials.db_password | b64enc | quote }}
@@ -9,7 +9,7 @@ data:
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: test-configmap
+  name: {{ $.Release.Name  }}-configmap
 data:
   db_type: {{ .Values.database_credentials.db_type | quote }}
   DB_HOST: {{ .Values.database_credentials.db_host | quote }}
