edited the test values in cm secret

--- a/charts/mongodb-migrant/templates/jobs.yaml
+++ b/charts/mongodb-migrant/templates/jobs.yaml
@@ -60,9 +60,9 @@ spec:
             value: {{ .query }}
         envFrom:
           - secretRef:
-              name: test-secret
+              name: {{ $.Release.Name  }}-secret
           - configMapRef:
-                name: test-configmap
+                name: {{ $.Release.Name  }}-configmap
 ---
 {{-  end }}
 {{-  end }}
