--- a/charts/sql-server-migrant/templates/jobs.yaml
+++ b/charts/sql-server-migrant/templates/jobs.yaml
@@ -60,6 +60,8 @@ spec:
             value: {{ .repo_name }}
           - name: SCRIPT_DIR
             value: {{ .location }}
+          - name: DB_NAME
+            value: {{ .db_name }}
           - name: MIGRATE_TO_VERSION
             value: {{ .version | quote }}
           - name: INSTNACE_NAME
